=============================================================
- Added DebugFlag option of "Switch" to log switch plugin details.
- When running with multiple slurmd daemons per node, enable specifying a
  range of ports on a single line of the node configuration in slurm.conf.
- New SelectType plugin of "serial" provides highly optimized throughput for
  serial (single CPU) jobs.
- New SwitchType plugin of "nrt" provides support for IBM Network Resource
  Table API.
- Added configuration option of "LaunchType" to control the mechanism used for
  launching application tasks. Available plugins include "slurm" (native SLURM
  mode), "runjob" (for use with IBM BlueGene/Q systems) and "poe" (for use with
  IBM Parallel Environment).

COMMAND CHANGES (see man pages for details)
===========================================
- Added sinfo option of "-T" to print reservation information.
- Added LicensesUsed field to output of "scontrol show configuration" command.
  Output is of the form "name:used/total".
- Add reservation flag of "Part_Nodes" to allocate all nodes in a partition to
  a reservation and automatically change the reservation when nodes are
  added to or removed from the reservation.
- sinfo partition field size will be set the the length of the longest
  partition name by default.

OTHER CHANGES
=============


API CHANGES
===========


Changed members of the following structs
========================================


Added the following struct definitions
======================================


Changed the following enums and #defines
========================================


Added the following API's
=========================
slurm_step_launch_add - added for adding tasks to steps that were
		       	previously started.  (Note: it currently has only been
			tested with user managed io jobs.)

Changed the following API's
===========================
slurm_step_ctx_daemon_per_node_hack - ported to newer poe interface