@@ -1348,14 +1348,18 @@ _step_missing_handler(struct step_launch_state *sls, slurm_msg_t *missing_msg)
 	hostset_destroy(all_nodes);
 }
 
-/* This RPC will probably only be used on BlueGene/Q systems to signal the
- * runjob process */
+/* This RPC typically used to send a signal an external program that
+ * is usually wrapped by srun.
+ */
 static void
 _step_step_signal(struct step_launch_state *sls, slurm_msg_t *signal_msg)
 {
 	job_step_kill_msg_t *step_signal = signal_msg->data;
 	debug2("Signal %u requested for step %u.%u", step_signal->signal,
 	       step_signal->job_id, step_signal->job_step_id);
+	if (sls->callback.step_signal)
+		(sls->callback.step_signal)(step_signal->signal);
+
 }
 
 /*
