@@ -383,7 +383,8 @@ extern int launch_p_create_job_step(srun_job_t *job, bool use_all_cpus,
 }
 
 extern int launch_p_step_launch(
-	srun_job_t *job, slurm_step_io_fds_t *cio_fds, uint32_t *global_rc)
+	srun_job_t *job, slurm_step_io_fds_t *cio_fds, uint32_t *global_rc,
+	void (*signal_function)(int))
 {
 	pthread_t msg_thread;
 
