@@ -68,7 +68,8 @@ API CHANGES
 
 Changed members of the following structs
 ========================================
-
+slurm_step_launch_callbacks_t - added step_signal for signaling steps that
+			      are perhaps not running as srun.
 
 Added the following struct definitions
 ======================================
